--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             font-family: "PingFang SC", "Microsoft Yahei", sans-serif;
         }
         body {
-   background: url('https://p3-sign.douyinpic.com/tos-cn-i-0813c000-ce/osEaxTpAiv1iGLBIAzPQBPAAnMxvAAQ8lw2Aq~tplv-dy-aweme-images-ds-rs-v1:1440:2560:q80.jpeg?lk3s=138a59ce&x-expires=1771675200&x-signature=M4TgR%2F7hL4IUGCqopqMd3W%2BTn28%3D&from=327834062&s=PackSourceEnum_AWEME_DETAIL&se=false&sc=image&biz_tag=aweme_images&l=202601222008048E3D115CAB42C6642803') no-repeat center center;
+   background: url('https://p26-sign.douyinpic.com/tos-cn-i-0813c000-ce/o89VXuAeEETSWcAE3doAbDdE2IsbeZAfwAmFD9~tplv-dy-aweme-images-ds-rs-v1:1440:3222:q80.jpeg?lk3s=138a59ce&x-expires=1771729200&x-signature=zKJnzq1Hiwg%2BOc5xJIr8%2BU50Sjo%3D&from=327834062&s=PackSourceEnum_AWEME_DETAIL&se=false&sc=image&biz_tag=aweme_images&l=20260123114028BC7C0C1B3B6D66A1EBB6') no-repeat center center;
    background-size: cover;
    background-attachment: fixed;
    background-position: fixed; /* 新增强锁定位 */
