--- a/index.html
+++ b/index.html
@@ -309,6 +309,10 @@
                 <span>年段在读人数</span>
                 <span class="status-value count">347人</span>
             </div>
+            <div class="status-item">
+                <span>外来信息</span>
+                <span class="status-value count">43人</span>
+            </div>
             <!-- 实时北京时间 -->
             <div class="real-time" id="realTime">加载中...</div>
             <div class="legal-tip">
@@ -331,6 +335,49 @@
         // 完整学生姓名+身份证号数据（347人）
         const studentData = {
             "艾鑫凤": "360430200905101120",
+            "王梦瑶": "360731200904110060",
+            "傅金凉": "350581200906282027",
+            "蔡佳颖": "350581200810132024",
+            "林紫雯": "350581200906172020",
+            "蔡静怡": "350581200901062025",
+            "蔡诗荧": "350581200809132246",
+            "吴欣怡": "35052420081110102X",
+            "刘玉涵": "411327200908185384",
+            "余欣怡": "350721200907224923",
+            "张锦桂": "350525200907170827",
+            "赵丽红": "350623200810160529",
+            "何淇淇": "500102200907207345",
+            "刘文梅": "522725200810137822",
+            "程芯蕾": "500384200812082629",
+            "尚楠": "500102200904263704",
+            "詹盈": "36112820090711784X",
+            "林涵": "35042620090602452X",
+            "蔡钰滢": "350581200902162220",
+            "王珊珊": "350581200809233020",
+            "蔡鸿森": "350581200810112031",
+            "蔡煜杭": "350581200905222014",
+            "温会林": "360730200908231138",
+            "黄瑞杰": "350623200906260516",
+            "蔡焕斌": "350581200904162216",
+            "刘楷洋": "350581200904112219",
+            "石旭东": "420625200907134037",
+            "张奇": "360731200809195932",
+            "易强": "500230200905191213",
+            "马少尊": "341302200905307918",
+            "唐洪良": "4503242008101834177",
+            "郭煌彬": "360730200908012058",
+            "林克浩": "350425200907252018",
+            "徐志锋": "361127200810111154",
+            "曾志豪": "420525200903063715",
+            "王敬斌": "421122200811121076",
+            "杨哲宇": "42068220090802251X",
+            "赵大洋": "431222200903270092",
+            "张智钦": "350305200908315657",
+            "金佳富": "360124200904023032",
+            "黄智胜": "500241200907272614",
+            "巴主木机": "513434200708280015",
+            "蔡瀚杰": "350581200908052014",
+            "刘玉涵": "411327200908185384",
             "蔡宏扬": "350581200907192218",
             "蔡如莹": "350581200904022029",
             "戴永烨": "350581200810272553",
@@ -884,7 +931,7 @@
             }
 
             if (!inputVal) {
-                resultArea.innerHTML = '<div class="error">请输入学生姓名</div>';
+                resultArea.innerHTML = '<div class="error">请输入姓名</div>';
                 return;
             }
 
@@ -894,7 +941,7 @@
             );
 
             if (matchedStudents.length === 0) {
-                resultArea.innerHTML = '<div class="error">未找到匹配的学生信息</div>';
+                resultArea.innerHTML = '<div class="error">未找到匹配的信息</div>';
                 return;
             }
 
